https://github.com/RaccoonCast/cmgm/commit/e23d4885bea89356e182f1875c9f0d6cf85ebdf4 -- Fix it on mobile too.

--- a/cmgm/styles/Home/desktop.css
+++ b/cmgm/styles/Home/desktop.css
@@ -7,9 +7,6 @@
   width: 35%;
   padding: 12px;
   font-size: 2.25em;
-  box-sizing: border-box;
-  -webkit-box-sizing:border-box;
-  -moz-box-sizing: border-box;
 }
 .width-75 {
   width: 26.25%!important;
