--- a/cmgm/styles/Home/main.css
+++ b/cmgm/styles/Home/main.css
@@ -3,3 +3,8 @@ padding-top: 10px;
 padding-bottom: 10px;
 text-align: center;
 }
+.textbox {
+  box-sizing: border-box;
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing: border-box;
+}
